<resources>
    <string name="app_name">To Do</string>
    <string name="homepage">Tasks</string>
    <string name="log_out">Log out</string>
    <string name="settings">Settings</string>
    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>
    <string name="new_task">New Task</string>
    <string name="save_button">Save</string>
    <string name="password_login">Password</string>
    <string name="enter_your_email">Enter your e-mail</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="repeat_password">Repeat password</string>
    <string name="new_user_register_here">New user? Register here!</string>
    <string name="forgot_your_password_click_here">Forgot your password? Click here.</string>
    <string name="remember_password">Remember password</string>
    <string name="dark_theme_enable">Use dark theme</string>

    <string name="english">English</string>
    <string name="italiano">Italiano</string>

    <string name="aspect">Aspect</string>
    <string name="general">General</string>
    <string name="language">Language</string>
    <string name="select_language">Select language</string>
    <string name="to_do">To Do</string>
    <string name="account">Account</string>
    <string name="log_out_successful">Log out successful</string>
    <string name="task_updated">Task updated</string>
    <string name="insert_text">Insert some text.</string>
    <string name="task_saved">Task saved.</string>
    <string name="reset_password_string">Enter your email to reset password</string>
    <string name="send_link">Send link</string>
    <string name="cancel">Cancel</string>
    <string name="email_sent_string">Email successfully sent!</string>
    <string name="email_not_sent">Fail to send email</string>
    <string name="pls_enter_mail">Please enter email</string>
    <string name="pls_enter_psw">Please enter password</string>
    <string name="login_successful">Login successful</string>
    <string name="login_fail">Fail to login</string>
    <string name="check_same_psw">Password must be the same</string>
    <string name="psw_6_char">Password must be at least 6 characters</string>
    <string name="reg_success">Registration successful</string>
    <string name="reg_fail">Registration failed</string>
    <string name="delete_data">Delete data</string>
    <string name="delete_account">Delete account</string>
    <string name="account_deleted">Account successfully deleted</string>
    <string name="account_not_deleted">Fail to delete account</string>
    <string name="invalid_psw">Invalid password</string>
    <string name="data_deleted">Data successfully deleted</string>
    <string name="alert_delete_data">This action will delete all your data.</string>
    <string name="proceed">Do you want to proceed?</string>
    <string name="alert_delete_account">This action will permanently delete your account and all your data.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="psw_to_confirm_deleting">Enter your password to confirm</string>
    <string name="delete_data_summary">Delete all your data from the database</string>
    <string name="delete_account_summary">Delete your account permanently</string>
    <string name="delete_task">Delete Task</string>
    <string name="delete_data_fail">Fail to delete data</string>

</resources>