<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="aspect_category"
        android:title="@string/aspect">

    <SwitchPreferenceCompat
        android:key="dark_theme"
        android:title="@string/dark_theme_enable"
        android:defaultValue="false"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="general_category"
        android:title="@string/general">

        <ListPreference
            android:dialogTitle="Select language"
            android:key="language"
            android:title="@string/language"
            android:entries="@array/languages"
            android:entryValues="@array/languages"/>

    </PreferenceCategory>


</androidx.preference.PreferenceScreen>