<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/email_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_your_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:boxBackgroundMode="none"
        android:id="@+id/password_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_login">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/password_login"
        android:inputType="textPassword"
        android:selectAllOnFocus="false" />

    </com.google.android.material.textfield.TextInputLayout>


    <CheckBox
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/remember_checkbox"
        android:text="@string/remember_password"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_container" />



    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/forgot_password"
        android:text="@string/forgot_your_password_click_here"
        android:textAlignment="center"
        android:textSize="16dp"
        android:linksClickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/remember_checkbox"
        app:layout_constraintStart_toStartOf="@+id/remember_checkbox"
        app:layout_constraintTop_toBottomOf="@+id/remember_checkbox"
        app:layout_constraintVertical_bias="0.05" />


    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/sign_in"
        android:textColor="@color/black"
        android:selectAllOnFocus="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/forgot_password"
        app:layout_constraintStart_toStartOf="@+id/forgot_password"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password"
        app:layout_constraintVertical_bias="0.10" />

    <TextView
        android:id="@+id/link_to_registration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/new_user_register_here"
        android:textAlignment="center"
        android:textSize="16dp"
        android:linksClickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />


</androidx.constraintlayout.widget.ConstraintLayout>